--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,7 +4,7 @@ footer {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
-  margin: auto;
+  margin: auto auto 20px;
   min-width: 300px;
   max-width: 875px;
 }
